Errors
<kernel>:1466:1: warning: control may reach end of non-void function
}
^
<kernel>:1504:1: warning: control may reach end of non-void function
}
^
<kernel>:2298:13: error: member reference base type 'char __constant[3]' is not a structure or union
        printf("%d". instance.type);
               ~~~~^ ~~~~~~~~
<kernel>:3461:17: warning: implicit declaration of function 'random_in_unit_sphere' is invalid in C99
                                                        + 0.3f * random_in_unit_sphere(state);
                                                                 ^

